--- a/4th quarter e port.html
+++ b/4th quarter e port.html
@@ -170,5 +170,28 @@
                 <source src="har har.mp3" type="audio/mp3"> 
                 Your browser does not support the audio element. 
 </audio>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        let audio = document.querySelector("audio");
+
+        if (!audio) {
+            console.error("Audio element not found! Make sure <audio> exists in your HTML.");
+            return;
+        }
+
+        function playAudio() {
+            audio.muted = false;
+            audio.play().then(() => {
+                console.log("Audio is playing!");
+            }).catch(err => {
+                console.error("Playback error:", err);
+            });
+        }
+
+        // Play audio when user interacts (click or keypress)
+        document.body.addEventListener("click", playAudio);
+        document.body.addEventListener("keydown", playAudio);
+    });
+</script>
 </body>
 </html>
