--- a/4th quarter e port.html
+++ b/4th quarter e port.html
@@ -3,6 +3,11 @@
 <head>
     <title>E-Portfolio for ICT-9</title>
     <link rel="stylesheet" href="e-port wow.css" type="text/css">
+    <style type="text/css">
+    body {
+         background-image:url(fnaf.gif);
+         }
+    </style>
 </head>
 <body>
     <header>
