Update 4th quarter e port.html

--- a/4th quarter e port.html
+++ b/4th quarter e port.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="e-port wow.css" type="text/css">
     <style type="text/css">
     body {
-         background-image:url(fnaf.gif);
+         background-image:url('fnaf.gif');
          }
     </style>
 </head>
