Update 4th quarter e port.html

--- a/4th quarter e port.html
+++ b/4th quarter e port.html
@@ -16,7 +16,7 @@
             let hobby = prompt("Enter your hobby:");
             
             if (!name || !birthday || !sexuality || !hobby) {
-                document.body.innerHTML = "<img src='jumpscare.gif' style='width: 100vw; height: 100vh; object-fit: cover;'>";
+                document.body.innerHTML = "<img src='Jumpscare.gif' style='width: 100vw; height: 100vh; object-fit: cover;'>";
             } else {
                 alert("Welcome, " + name + "! Enjoy your visit.");
             }
