Update 4th quarter e port.html

--- a/4th quarter e port.html
+++ b/4th quarter e port.html
@@ -6,6 +6,7 @@
     <style type="text/css">
     body {
          background-image:url('fnaf.gif');
+         background-size:cover;
          }
     </style>
     <script>
